--- a/demo/index.html
+++ b/demo/index.html
@@ -21,7 +21,7 @@
             var dp1 = new DPlayer({
                 container: document.getElementById('dplayer1'),
                 video: {
-                    url: 'http://devtest.qiniudn.com/若能绽放光芒.mp4',
+                    url: 'https://360anime.net/A1TEST/demo/1784578235129592.mp4',
                     pic: 'http://devtest.qiniudn.com/若能绽放光芒.png',
                     thumbnails: 'http://devtest.qiniudn.com/thumbnails.jpg',
                 },
@@ -60,7 +60,7 @@
                 volume: 0.2,
                 mutex: false,
                 video: {
-                    url: 'http://devtest.qiniudn.com/若能绽放光芒.mp4',
+                    url: 'https://360anime.net/A1TEST/demo/1784578235129592.mp4',
                     pic: 'http://devtest.qiniudn.com/若能绽放光芒.png',
                     type: 'auto',
                     thumbnails: 'http://devtest.qiniudn.com/thumbnails.jpg'
